@@ -14,6 +14,9 @@
 
         <div class="listingviews" tal:define="adapter nocall:context/@@listing_view_adapter;
             batch folderContents | adapter/retrieve_listing_items;">
+
+             <p id="result_count" tal:condition="python:adapter.display_count">Showing <span tal:content="adapter/number_of_items" /> items</p>
+
           <div class="listing-collection-view"
             tal:define="class_name python: adapter.listing_style_class;
                         fields python: adapter.retrieve_context_item;"
