@@ -4,7 +4,8 @@ Changelog
 1.0.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add an option to display the result count on a listing view.
+  [instification]
 
 
 1.0.1 (2019-01-17)
